       has local modifications. (Stefan)
- NEW: Option to jump to the first conflict in TortoiseMerge. (Stefan)
- NEW: new overlay icon set "Function" with icons that cover less
       of the original icon. (Lazare Inepologlou)
- NEW: Revision graph: Show range of last committed and range 
       of current revisions in working copy (Stefan Fuhrmann)
- BUG: Merged revisions must be counted only 
       once in stats (Stefan Fuhrmann)
- BUG: Relative Webviewer urls didn't work from the 
       repository browser. (Stefan)

Version 1.6.7
- BUG: The status cache could segfault in some situations. (Stefan)
- BUG: Memory leak in SubWCRevCOM. (Stefan)
- BUG: The copy-from url in the Check-for-modifications Dialog
       was wrong for single files. (Stefan)
- BUG: TortoiseIDiff didn't handel multi-page tiff images
       properly and could even crash. (Stefan)
- BUG: SubWCRevCOM could only be used by one single application
       at a time. (Stefan)
- BUG: The column order wasn't saved correctly in the status
       list control. (Stefan)
- BUG: The message "only numbers are allowed" could be shown even
       when the bugtraq:number property was set to false. (Stefan)
- BUG: The "diff with previous revision" in the log dialog could
       use the wrong revision if there was a path with a copyfrom
       revision. (Stefan)
- BUG: Deadlock in the shell extension when used from a multi-threaded
       application. (Jonathan Potter, GP Software and Stefan)
- BUG: The "commonURL" parameter in the CheckCommit() method of the
       IBugtraqProvider2 interface was sometimes wrong. (Stefan)
- BUG: Revision graph won't show w/c revision under certain 
       conditions. (Stefan Fuhrmann)
- BUG: Revision graph would segfault for small repositories
       (Stefan Fuhrmann)
- BUG: Errors returned in a post-commit hook script were ignored
       in a branch/tag/copy operation. (Stefan)
- BUG: Text files dragged from the repository browser to the explorer